Adding postgrator, .env, and updated package.json files

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "serve -s build",
-    "preserve": "npm run build"
+    "preserve": "npm run build",
+    "migate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate"
   },
   "eslintConfig": {
     "extends": "react-app"
