--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NODE_ENV=development
-PORT=8000
+PORT=8002
 API_TOKEN="a564a5e6-1dcb-4024-98d7-408705e51acb"
 DB_URL="postgresql://dunder_mifflin@localhost/noteful"
 TEST_DB_URL="postgresql://dunder_mifflin@localhost/noteful_test"
+SERVER_ORIGIN="http://localhost:8001"
